--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="by-name">
       <h2>OCaml package documentation</h2>
       <ol>
-      <li><a href="async-uri/index.html">async-uri</a> <span class="version">0.3.0-4-g67c4682</span></li>
+      <li><a href="async-uri/index.html">async-uri</a> <span class="version">0.4.0</span></li>
       </ol>
       </div>
     </main>
